--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "test:params": "node ./scripts/test-params",
+    "build:index": "pug src/index.pug --out www",
+    "build:js": "jspm bundle-sfx src/app.js www/app.js",
     "all": "npm run listBuckets && npm run putJson && npm run getJson && npm run putText && npm run getText && npm run putImage && npm run getImage",
     "listBuckets": "node ./scripts/listBuckets",
     "putJson": "node ./scripts/putJson",
@@ -30,6 +33,16 @@
   },
   "homepage": "https://github.com/AckerApple/ack-aws-s3-playground#readme",
   "dependencies": {
-    "node-s3-encryption-client": "0.0.2"
+    "jspm": "^0.16.41",
+    "node-s3-encryption-client": "0.0.2",
+    "pug": "^2.0.0-beta4"
+  },
+  "jspm": {
+    "dependencies": {},
+    "devDependencies": {
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4"
+    }
   }
 }
