--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "ack-aws-s3-playground",
   "version": "1.0.1",
   "description": "A package with tests and examples for learning how aws s3 connections are handled in NodeJs and Javascript",
-  "main": "index.js",
+  "main": "ack-aws-s3-playground.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:params": "node ./scripts/test-params",
+    "build": "npm run build:index && npm run build:js",
     "build:index": "pug src/index.pug --out www",
-    "build:js": "jspm bundle-sfx src/app.js www/app.js",
+    "build:js": "jspm build src/app.js www/app.js",
     "all": "npm run listBuckets && npm run putJson && npm run getJson && npm run putText && npm run getText && npm run putImage && npm run getImage",
     "listBuckets": "node ./scripts/listBuckets",
     "putJson": "node ./scripts/putJson",
@@ -33,16 +34,95 @@
   },
   "homepage": "https://github.com/AckerApple/ack-aws-s3-playground#readme",
   "dependencies": {
-    "jspm": "^0.16.41",
-    "node-s3-encryption-client": "0.0.2",
+    "ack-aws-s3-universal": "github:ackerapple/ack-aws-s3-universal",
+    "aws-sdk": "^2.6.4",
     "pug": "^2.0.0-beta4"
   },
+  "devDependencies": {
+    "jspm": "^0.17.0-beta.28"
+  },
   "jspm": {
-    "dependencies": {},
+    "name": "ack-aws-s3-playground",
+    "dependencies": {
+      "ack-aws-s3-universal": "github:ackerapple/ack-aws-s3-universal@master",
+      "aws-sdk-js": "github:aws/aws-sdk-js@^2.6.4"
+    },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
+      "core-js": "npm:core-js@^1.1.4",
+      "plugin-babel": "npm:systemjs-plugin-babel@^0.0.13"
+    },
+    "peerDependencies": {
+      "assert": "github:jspm/nodelibs-assert@^0.2.0-alpha",
+      "buffer": "github:jspm/nodelibs-buffer@^0.2.0-alpha",
+      "child_process": "github:jspm/nodelibs-child_process@^0.2.0-alpha",
+      "constants": "github:jspm/nodelibs-constants@^0.2.0-alpha",
+      "crypto": "github:jspm/nodelibs-crypto@^0.2.0-alpha",
+      "events": "github:jspm/nodelibs-events@^0.2.0-alpha",
+      "fs": "github:jspm/nodelibs-fs@^0.2.0-alpha",
+      "http": "github:jspm/nodelibs-http@^0.2.0-alpha",
+      "os": "github:jspm/nodelibs-os@^0.2.0-alpha",
+      "path": "github:jspm/nodelibs-path@^0.2.0-alpha",
+      "process": "github:jspm/nodelibs-process@^0.2.0-alpha",
+      "stream": "github:jspm/nodelibs-stream@^0.2.0-alpha",
+      "string_decoder": "github:jspm/nodelibs-string_decoder@^0.2.0-alpha",
+      "url": "github:jspm/nodelibs-url@^0.2.0-alpha",
+      "util": "github:jspm/nodelibs-util@^0.2.0-alpha",
+      "vm": "github:jspm/nodelibs-vm@^0.2.0-alpha"
+    },
+    "overrides": {
+      "npm:babel-core@5.8.38": {
+        "main": "browser.js",
+        "dependencies": {},
+        "jspmNodeConversion": false,
+        "map": {
+          "regenerator/runtime": "babel-runtime/regenerator/runtime"
+        },
+        "meta": {
+          "browser.js": {
+            "exports": "babel",
+            "format": "global"
+          }
+        }
+      },
+      "npm:babel-runtime@5.8.38": {
+        "main": false,
+        "dependencies": {},
+        "optionalDependencies": {
+          "core-js": "^1.2.0"
+        }
+      },
+      "npm:base64-js@0.0.8": {
+        "ignore": [
+          "bench"
+        ]
+      },
+      "npm:inherits@2.0.1": {
+        "ignore": [
+          "test.js"
+        ]
+      },
+      "npm:inherits@2.0.3": {
+        "ignore": [
+          "test.js"
+        ]
+      },
+      "npm:readable-stream@1.1.14": {
+        "map": {
+          "stream": "stream-browserify/index"
+        },
+        "systemjs": {
+          "main": "readable.js"
+        },
+        "dependencies": {
+          "core-util-is": "~1.0.0",
+          "inherits": "~2.0.1",
+          "isarray": "0.0.1",
+          "string_decoder": "~0.10.0",
+          "stream-browserify": "^1.0.0"
+        }
+      }
     }
   }
 }
